2004-09-08  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (join7): Re-order join7-5 and join7-6 tests.

2004-09-08  Conrad T. Pino  <Conrad@Pino.com>

	* server.c: Remove extra token in conditional compile line 5580
	causing error in Windows Visual C++ 6.0 compile.

2004-09-08  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (fd_buffer_block): Protect fcntl calls when F_GETFL,
	O_NONBLOCK and F_SETFL are not available.
	* server.c (move_file_offset): Ditto.
	(set_nonblock_fd): Ditto.

	* buffer.c (packetizing_buffer_input): Use size_t rather than int.
	(struct packetizing_buffer): Ditto.
	
2004-09-07  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (server_updated): Deal with cvs -n update -jt1 -jt2
	"protocol error: uncounted data discarded" problem.
	* sanity.sh (join7): New test for this case.
	
2004-09-04  Derek Price  <derek@ximbiot.com>

	* socket-client.c (socket_client_initialize): Pass new args to
	buf_initialize.

2004-09-04  Derek Price  <derek@ximbiot.com>

	Silence `gcc -Wall'.

	* buffer.c (buf_initialize): Remove unnecessary typecasts by using
	size_t instead of int or bool as args.  
	* buffer.c, import.c, log-buffer.c, ms-buffer.c, zlib.c: Change all
	callers.
	* buffer.h, cvs.h: Update protos.
	* client.c, ls.c, main.c, rcs.c, root.c, server.c: Remove unused vars,
	add parens, as requested by `gcc -Wall'.

2004-09-04  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (writeproxy-noredirect): Between "Set" and
	"expand-modules" are the optional Kerberos-encrypt, Gssapi-encrypt
	and Gssapi-authenticate entries. Use ${DOTSTAR} to deal with
	these optionally configured requests.

2004-09-04  Mark D. Baushke  <mdb@cvshome.org>

	* import.c (expand_at_signs): Typecasting for fwrite results.
	* log-buffer.c (log_buffer_input, log_buffer_output,
	log_buffer_initialize): Ditto.

	* log-buffer.c (log_buffer_initialize): Protect reference to
	fatal_errors.

	* parseinfo.c (parse_config): Protect reference to PrimaryServer
	using #ifdef PROXY_SUPPORT.
